# CMPT433As4

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: gameLogic.c  gameLogic.h  main.c
hal/: CMakeLists.txt
hal/include/hal/: accelerometer.h  i2c.h  infoPrinter.h  joystick.h  neoPixel.h  pwmBuzzer.h  segDisplay.h  sharedDataStruct.h  shutdown.h  utils.h
hal/src/: accelerometer.c  i2c.c  infoPrinter.c  joystick.c  neoPixel.c  pwmBuzzer.c  segDisplay.c  shutdown.c  utils.c
pru-as4/: sharedDataStruct.h  sharedMem-PRU.c
